fixing column gap of tables

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,7 +15,7 @@
     align-items: start;
     /* center content horizontally */
     justify-content: center;
-    column-gap: 5rem;
+    column-gap: 2rem;
     justify-self: auto;
     margin: 3rem;
   }
@@ -70,7 +70,7 @@
     margin: 3rem 0;
   }
   .table__layout {
-    column-gap: 10rem;
+    column-gap: 5rem;
   }
   /* last team section */
   .last-race__container {
